# rtc_rnnoise

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  pubspec.yaml
android/: .project  build.gradle  settings.gradle
android/build_native/: CMakeCache.txt  Makefile  cmake_install.cmake
android/build_v7a/: CMakeCache.txt  Makefile  cmake_install.cmake
android/build_x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  CMakeLists_build.txt  jni_bridge.cpp
doc/: COMPILE_ANDROID.md  Kotlin_1_4_10_Legacy_Package_Assessment.md  RSC_SDK_Latest_Design_20260318.md  RTC_Double_APK_AIDL_Design.md  RTC_SDK_Flutter_Startup_Flow.md  RscRtcBridge_API_Reference.md  XChatKit_Deployment_Guide.md  XChatKit_Minimal_App_Integration.md  code_review_report.md  repomix_android_20260318.md
doc/superpowers/plans/: 2026-04-08-rtc-double-apk-aidl-phase1-poc.md  2026-04-10-rtc-double-apk-p2-flutter-module-migration.zh-CN.md  2026-04-13-flutter-rtc-rnnoise.md
doc/superpowers/specs/: 2026-03-20-forsingle-new-mode-design.md  2026-04-08-rtc-double-apk-aidl-architecture-design.md  2026-04-13-flutter-rtc-rnnoise-design.md
docs/: COMPILE_IOS.md  MyAppForAIDL_to_rtc_apk_app_startup_flow.md  OFFLINE_COMPILATION_MIGRATION.md  PLATFORM_STATUS.md  RSC_SDK_Architecture.md  WebSocket_Communication_Flow.md  XChatKit_API_Reference.md  new_video_api.docx  new_video_deploy.docx  repomix_flutter_module_20260318.md  run_docker_build.sh  新增传输字段指导和自查.md
docs/superpowers/plans/: 2026-03-27-room-lifecycle-state-machine.md  2026-04-10-rtc-double-apk-p2-flutter-module-migration.md  2026-04-13-flutter-rtc-rnnoise.md  2026-04-16-rnnoise-attach-debug.md
docs/superpowers/specs/: 2026-03-27-room-lifecycle-state-machine-design.md  (+2 more)
example/: README.md  android_ui_test.sh  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
ios/: CMakeLists.txt  CMakeLists_ios.txt  rtc_rnnoise.podspec
ios/Classes/: RnnoiseProcessor.h  RnnoiseProcessor.mm  RtcRnnoisePlugin.h  RtcRnnoisePlugin.m  RtcRnnoisePlugin.swift  rtc_rnnoise.podspec
ios/build_ios/: CMakeCache.txt  cmake_install.cmake
ios/build_sim/: CMakeCache.txt
ios/build_sim_arm64/: CMakeCache.txt
ios/build_sim_m3/: CMakeCache.txt
lib/: rtc_rnnoise.dart  rtc_rnnoise_method_channel.dart  rtc_rnnoise_platform_interface.dart
src/cpp/: audio_utils.h  rnnoise_api.cpp  rnnoise_engine.cpp  rnnoise_engine.h  rtc_rnnoise.h  types.h
test/: rtc_rnnoise_method_channel_test.dart  rtc_rnnoise_test.dart
(+42 files in other folders)
